Fix spacing in html

--- a/css/main.css
+++ b/css/main.css
@@ -21,9 +21,6 @@ h1, h2, p {
   font-family: "Josefin Sans", sans-serif;
   font-size: 28px;
   color: rgba(255,255,255,.70);
-}
-
-.animate {
   animation: animated-text 10s steps(30,end) 1s 1 normal both;
   animation-iteration-count: 10;
 }
@@ -34,11 +31,6 @@ h1, h2, p {
 }
 
 @media only screen and (min-width: 25em){
-
-  html {
-    font-size: 100%;
-    line-height: 1.3;
-  }
 
   h1,
   p {
@@ -57,11 +49,6 @@ h1, h2, p {
 
 @media only screen and (min-width: 38em){
 
-  html {
-    font-size: 110%;
-    line-height: 1.4;
-  }
-
   h1,
   p {
     margin: 0 0 1.4rem;
@@ -78,11 +65,6 @@ h1, h2, p {
 }
 
 @media only screen and (min-width: 60em) {
-
-  html {
-    font-size: 120%;
-    line-height: 1.5;
-  }
 
   h1,
   p {
